[gd_scene load_steps=2 format=3 uid="uid://b1nd4ha1x048y"]

[ext_resource type="Script" path="res://game_scenes/Trade/sell_menu.gd" id="1_fctbh"]

[node name="SellMenu" type="CanvasLayer"]
script = ExtResource("1_fctbh")

[node name="ItemsPanel" type="Panel" parent="."]
offset_top = 113.0
offset_right = 364.0
offset_bottom = 646.0

[node name="MCItems" type="MarginContainer" parent="ItemsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24

[node name="Label" type="Label" parent="ItemsPanel/MCItems"]
layout_mode = 2
size_flags_vertical = 0
text = "SellStore(Items)"
horizontal_alignment = 1

[node name="NextButton" type="Button" parent="ItemsPanel/MCItems"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Next"

[node name="PlayerItems" type="VBoxContainer" parent="ItemsPanel/MCItems"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="EquipmentsPanel" type="Panel" parent="."]
offset_top = 113.0
offset_right = 364.0
offset_bottom = 646.0

[node name="MCEquipments" type="MarginContainer" parent="EquipmentsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24

[node name="Label" type="Label" parent="EquipmentsPanel/MCEquipments"]
layout_mode = 2
size_flags_vertical = 0
text = "SellStore(Equipments)"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="EquipmentsPanel/MCEquipments"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Next"

[node name="PlayerEquipmens" type="VBoxContainer" parent="EquipmentsPanel/MCEquipments"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[connection signal="pressed" from="ItemsPanel/MCItems/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="EquipmentsPanel/MCEquipments/BackButton" to="." method="_on_back_button_pressed"]
